Change the cover image

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ email: ''
 #blog logo
 logo: "http://kangsLee.github.io/assets/images/profile.jpg"
 # blog cover
-cover: "http://kangsLee.github.io/assets/images/assets/images/cover.jpg"
+cover: "http://kangsLee.github.io/assets/images/cover.jpg"
 
 authors:
    KangSan Lee:
