Disqus added, config fixed

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ baseurl: ""
 twitter_handle: '@lkasng'
 
 #fill in disqus shortname to use disqus
-disqus: ''
+disqus: 'kangsanlee'
 
 timezone: Asia/Seoul
 
