fix facebook url

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ timezone: Asia/Seoul
 social:
 
   - icon: facebook
-    url: http://fb.me/yikasa
+    url: http://fb.me/leegangsan
     desc: Connect with me facebook
     share_url: https://www.facebook.com/sharer.php
     share_title: ?t=
